syntax = "proto3";
package go;
import "gamecomm.proto";
//入场
message BrcowcowSceneResp {
  int64 TimeStamp = 1;        //时间戳
  repeated int32 Chips = 2;      //筹码
  repeated bytes AwardAreas = 3;    //开奖记录(路单)
  repeated int64 AreaBets = 4;    //各下注区当前总下注额
  repeated int64 MyBets = 5;      //我在各下注区的总下注额
  string Inning = 6;               // 牌局号
  PlayerListInfo AllPlayers = 7;  //玩家列表
  uint64 HostID = 8;
}
//状态
// 服务端推送
//(空闲 - 喊庄)
message BrcowcowStateFreeResp {
  TimeInfo Times = 1;
}
//(开始 - 定庄)
message BrcowcowStateStartResp {
  TimeInfo Times = 1;
  uint64 HostID = 2;
  string Inning = 3;               // 牌局号
}
//(游戏中 - 下注)
message BrcowcowStatePlayingResp {
  TimeInfo Times = 1;
}
//(开奖)
message BrcowcowStateOpenResp {
  TimeInfo Times = 1;
  BrcowcowOpenResp OpenInfo = 2;
}
//(结束)
message BrcowcowStateOverResp {
  TimeInfo Times = 1;
}
//下注
message BrcowcowBetReq {
  int32 BetArea = 1;        //下注区域
  int64 BetScore = 2;        //下注金额
}
//下注结果：广播
message BrcowcowBetResp {
  uint64 UserID = 1;
  int32 BetArea = 2;        //下注区域
  int64 BetScore = 3;        //下注金额
}
//开牌
message BrcowcowOpenResp {
  bytes AwardArea = 1;    //各区域胜负：1胜，0负
  CardInfo BankerCard = 2;    //天
  CardInfo TianCard = 3;    //天
  CardInfo XuanCard = 4;    //玄
  CardInfo DiCard = 5;    //地
  CardInfo HuangCard = 6;  //黄
}
//结算
message BrcowcowOverResp{
  int64 MyAcquire = 1;    //个人所得
  repeated int64 TotalSettlement = 2;  //统计：庄家+各区域输赢钱数额结算
}
//----------------------------------------------------------------------------------
//抢庄
message BrcowcowHostReq {
  bool IsWant = 1;  //true上庄 false取消上庄
}
message BrcowcowHostResp {
  uint64 UserID = 1;
  bool IsWant = 2;  //true上庄 false取消上庄
}
//待上庄列表
message BrcowcowHostListReq {
}
message BrcowcowHostListResp {
  PlayerInfo CurHost = 1;        //当前庄家
  repeated uint64 Waitlist = 2;    //待上庄列表
}
