syntax = "proto3";
package go;
import "gamecomm.proto";
//    牌型    倍数
//    (0~6点)  1
//    (7~9点)  2
//    三公     3
//    炸弹     4
//    爆玖     5
//三公玩家信息
message SangongPlayer {
  PlayerInfo  MyInfo = 1;
  CardInfo Cards = 2;     //
  int64  CallScore = 3;   //叫分分值
  int64  BetScore = 4;    //下注分值
  int64  GainScore = 5;   //输赢分值
  int64  TotalScore = 6;  //总积分
}
//入场
message EnterGameSGResp {
  uint64 GameID = 1; //游戏标识
  uint32 ChairNum = 2;        //椅子编号(不满足req的此项时,将由系统分配,并返回提示)
  SangongPlayer Player = 3;
}
//场景
message SangongSceneResp {
  int64 TimeStamp = 1;              //时间戳
  repeated int32 Chips = 2;         //筹码
  string Inning = 3;                // 牌局号
  repeated SangongPlayer AllPlayers = 4;  //玩家列表信息
  uint64 HostID = 5;              //庄家ID =0表示无人坐庄,牌值最大者获胜
}
//状态
// 服务端推送
//(空闲 - )
message SangongStateFreeResp {
  TimeInfo Times = 1;
  string Inning = 2;               // 牌局号
}
//(开始 - 喊庄)
message SangongStateCallResp {
  TimeInfo Times = 1;
}
//定庄
message SangongStateDecideResp {
  TimeInfo Times = 1;
  uint64 HostID = 2;
  int64 Multiple = 3;  //相同倍数 可用作
}
//(游戏中 - 下注)
message SangongStatePlayingResp {
  TimeInfo Times = 1;
}
//(发牌)
message SangongStateDealResp {
  TimeInfo Times = 1;
}
//(摊牌)
message SangongStateOpenResp {
  TimeInfo Times = 1;
  SangongOpenResp OpenInfo = 2;
}
//(结束)
message SangongStateOverResp {
  TimeInfo Times = 1;
}
//////////有些玩家不配有牌////////
message SangongDealResp {
  uint64 UserID = 1;
  CardInfo Cards = 2;     //只有开奖时有真实值
}
//////////////////////////////////////
//准备
message SangongReadyReq {
  bool IsReady = 1; // 玩家准备，可以取消准备
}
message SangongReadyResp {
  uint64 UserId = 1;
  bool IsReady = 2; // 玩家准备，可以取消准备
}
//喊庄
message SangongCallReq {
  int64 Multiple = 1;        //喊庄倍数
}
message SangongCallResp {
  uint64 UserID = 1;
  int64 Multiple = 2;        //喊庄倍数
}
//下注
message SangongBetReq {
  int64 BetScore = 1;         //倍数
}
message SangongBetResp {
  uint64 UserId = 1;
  int64 BetScore = 2;         //倍数
}
//摊牌
message SangongOutCardReq {
}
message SangongOutCardResp {
  uint64 UserId = 1;
  CardInfo Cards = 2;     //
}
//结算
message SangongOpenResp{
  repeated SangongPlayer AllPlayers = 1;  //玩家列表信息
}
