//---------------------------------
//该文件自动生成，请勿手动更改
//---------------------------------
package msg

import (
    "sync"
    "github.com/golang/protobuf/proto"
    "github.com/name5566/leaf/network/json"
    "github.com/name5566/leaf/network/protobuf"
    protoMsg "miniRobot/msg/go"
)

// 使用默认的 JSON 消息处理器（默认还提供了 protobuf 消息处理器）
var ProcessorJson = json.NewProcessor()
var ProcessorProto = protobuf.NewProcessor()

//对外接口 【这里的注册函数并非线程安全】
func RegisterMessage(message proto.Message) {
    var wg sync.WaitGroup
    wg.Add(1)
    ProcessorProto.Register(message)
    wg.Done()
}

func init() {
    //login文件生成的代码
    RegisterMessage(&protoMsg.UserInfo{})
    RegisterMessage(&protoMsg.TableInfo{})
    RegisterMessage(&protoMsg.GameInfo{})
    RegisterMessage(&protoMsg.MasterInfo{})
    RegisterMessage(&protoMsg.TaskItem{})
    RegisterMessage(&protoMsg.ClassItem{})
    RegisterMessage(&protoMsg.GameItem{})
    RegisterMessage(&protoMsg.TableItem{})
    RegisterMessage(&protoMsg.TaskList{})
    RegisterMessage(&protoMsg.ClassList{})
    RegisterMessage(&protoMsg.GameList{})
    RegisterMessage(&protoMsg.TableList{})
    RegisterMessage(&protoMsg.RegisterReq{})
    RegisterMessage(&protoMsg.RegisterResp{})
    RegisterMessage(&protoMsg.LoginReq{})
    RegisterMessage(&protoMsg.LoginResp{})
    RegisterMessage(&protoMsg.AllopatricResp{})
    RegisterMessage(&protoMsg.ReconnectReq{})
    RegisterMessage(&protoMsg.ReconnectResp{})
    RegisterMessage(&protoMsg.UpdateMoneyReq{})
    RegisterMessage(&protoMsg.UpdateMoneyResp{})
    RegisterMessage(&protoMsg.RechargeReq{})
    RegisterMessage(&protoMsg.RechargeResp{})
    RegisterMessage(&protoMsg.ChooseClassReq{})
    RegisterMessage(&protoMsg.ChooseClassResp{})
    RegisterMessage(&protoMsg.ChooseGameReq{})
    RegisterMessage(&protoMsg.ChooseGameResp{})
    RegisterMessage(&protoMsg.SettingTableReq{})
    RegisterMessage(&protoMsg.SettingTableResp{})
    RegisterMessage(&protoMsg.ResultResp{})
    RegisterMessage(&protoMsg.ResultPopResp{})
    RegisterMessage(&protoMsg.PingReq{})
    RegisterMessage(&protoMsg.PongResp{})

    //comand文件生成的代码
    RegisterMessage(&protoMsg.PacketData{})

    //gamecomm文件生成的代码
    RegisterMessage(&protoMsg.PlayerInfo{})
    RegisterMessage(&protoMsg.GoodsInfo{})
    RegisterMessage(&protoMsg.EmailInfo{})
    RegisterMessage(&protoMsg.CardInfo{})
    RegisterMessage(&protoMsg.TimeInfo{})
    RegisterMessage(&protoMsg.AreaInfo{})
    RegisterMessage(&protoMsg.InningInfo{})
    RegisterMessage(&protoMsg.PlayerListInfo{})
    RegisterMessage(&protoMsg.PlayerRecord{})
    RegisterMessage(&protoMsg.GameRecord{})
    RegisterMessage(&protoMsg.GameRecordList{})
    RegisterMessage(&protoMsg.EnterGameReq{})
    RegisterMessage(&protoMsg.EnterGameResp{})
    RegisterMessage(&protoMsg.ExitGameReq{})
    RegisterMessage(&protoMsg.ExitGameResp{})
    RegisterMessage(&protoMsg.ChangeTableReq{})
    RegisterMessage(&protoMsg.ChangeTableResp{})
    RegisterMessage(&protoMsg.GetBackPasswordReq{})
    RegisterMessage(&protoMsg.GetBackPasswordResp{})
    RegisterMessage(&protoMsg.TrusteeReq{})
    RegisterMessage(&protoMsg.TrusteeResp{})
    RegisterMessage(&protoMsg.RollDiceReq{})
    RegisterMessage(&protoMsg.RollDiceResp{})
    RegisterMessage(&protoMsg.UpdateGoldReq{})
    RegisterMessage(&protoMsg.UpdateGoldResp{})
    RegisterMessage(&protoMsg.GetInningsInfoReq{})
    RegisterMessage(&protoMsg.GetInningsInfoResp{})
    RegisterMessage(&protoMsg.GetRecordReq{})
    RegisterMessage(&protoMsg.GetRecordResp{})
    RegisterMessage(&protoMsg.GameOverReq{})
    RegisterMessage(&protoMsg.GameOverResp{})
    RegisterMessage(&protoMsg.EmailReq{})
    RegisterMessage(&protoMsg.EmailResp{})
    RegisterMessage(&protoMsg.ClaimReq{})
    RegisterMessage(&protoMsg.ClaimResp{})
    RegisterMessage(&protoMsg.SuggestReq{})
    RegisterMessage(&protoMsg.SuggestResp{})
    RegisterMessage(&protoMsg.NotifyBeOut{})
    RegisterMessage(&protoMsg.NotifyGoldChange{})
    RegisterMessage(&protoMsg.NotifyNoticeReq{})
    RegisterMessage(&protoMsg.NotifyNoticeResp{})

    //baccarat文件生成的代码
    RegisterMessage(&protoMsg.BaccaratSceneResp{})
    RegisterMessage(&protoMsg.BaccaratStateStartResp{})
    RegisterMessage(&protoMsg.BaccaratStatePlayingResp{})
    RegisterMessage(&protoMsg.BaccaratStateOpenResp{})
    RegisterMessage(&protoMsg.BaccaratStateOverResp{})
    RegisterMessage(&protoMsg.BaccaratHostReq{})
    RegisterMessage(&protoMsg.BaccaratHostResp{})
    RegisterMessage(&protoMsg.BaccaratSuperHostReq{})
    RegisterMessage(&protoMsg.BaccaratSuperHostResp{})
    RegisterMessage(&protoMsg.BaccaratBetReq{})
    RegisterMessage(&protoMsg.BaccaratBetResp{})
    RegisterMessage(&protoMsg.BaccaratOpenResp{})
    RegisterMessage(&protoMsg.BaccaratCheckoutResp{})

    //cowcow文件生成的代码
    RegisterMessage(&protoMsg.GameCowcowEnter{})
    RegisterMessage(&protoMsg.GameCowcowHost{})
    RegisterMessage(&protoMsg.GameCowcowSuperHost{})
    RegisterMessage(&protoMsg.GameCowcowReq{})
    RegisterMessage(&protoMsg.GameCowcowBetResp{})
    RegisterMessage(&protoMsg.GameCowcowOver{})
    RegisterMessage(&protoMsg.GameCowcowCheckout{})

    //landLords文件生成的代码
    RegisterMessage(&protoMsg.LandLordsPlayer{})
    RegisterMessage(&protoMsg.LandLordsSceneResp{})
    RegisterMessage(&protoMsg.LandLordsStateFreeResp{})
    RegisterMessage(&protoMsg.LandLordsStateStartResp{})
    RegisterMessage(&protoMsg.LandLordsStateCallResp{})
    RegisterMessage(&protoMsg.LandLordsStateDoubleResp{})
    RegisterMessage(&protoMsg.LandLordsStatePlayingResp{})
    RegisterMessage(&protoMsg.LandLordsStateOpenResp{})
    RegisterMessage(&protoMsg.LandLordsStateOverResp{})
    RegisterMessage(&protoMsg.LandLordsDealResp{})
    RegisterMessage(&protoMsg.LandLordsBottomCardResp{})
    RegisterMessage(&protoMsg.LandLordsReadyReq{})
    RegisterMessage(&protoMsg.LandLordsReadyResp{})
    RegisterMessage(&protoMsg.LandLordsCallReq{})
    RegisterMessage(&protoMsg.LandLordsCallResp{})
    RegisterMessage(&protoMsg.LandLordsDoubleReq{})
    RegisterMessage(&protoMsg.LandLordsDoubleResp{})
    RegisterMessage(&protoMsg.LandLordsMingReq{})
    RegisterMessage(&protoMsg.LandLordsMingResp{})
    RegisterMessage(&protoMsg.LandLordsTrusteeReq{})
    RegisterMessage(&protoMsg.LandLordsTrusteeResp{})
    RegisterMessage(&protoMsg.LandLordsOutCardReq{})
    RegisterMessage(&protoMsg.LandLordsOutCardResp{})
    RegisterMessage(&protoMsg.LandLordsCheckoutResp{})

    //mahjong文件生成的代码
    RegisterMessage(&protoMsg.MahjongKeZi{})
    RegisterMessage(&protoMsg.MahjongHint{})
    RegisterMessage(&protoMsg.MahjongPlayer{})
    RegisterMessage(&protoMsg.EnterGameMJResp{})
    RegisterMessage(&protoMsg.MahjongSceneResp{})
    RegisterMessage(&protoMsg.MahjongStateFreeResp{})
    RegisterMessage(&protoMsg.MahjongStateDirectResp{})
    RegisterMessage(&protoMsg.MahjongStateDecideResp{})
    RegisterMessage(&protoMsg.MahjongStateRollDiceResp{})
    RegisterMessage(&protoMsg.MahjongStateStartResp{})
    RegisterMessage(&protoMsg.MahjongStatePlayingResp{})
    RegisterMessage(&protoMsg.MahjongStateWaitOperateResp{})
    RegisterMessage(&protoMsg.MahjongStateOpenResp{})
    RegisterMessage(&protoMsg.MahjongStateOverResp{})
    RegisterMessage(&protoMsg.MahjongReadyReq{})
    RegisterMessage(&protoMsg.MahjongReadyResp{})
    RegisterMessage(&protoMsg.MahjongRollReq{})
    RegisterMessage(&protoMsg.MahjongRollResp{})
    RegisterMessage(&protoMsg.MahjongOutCardReq{})
    RegisterMessage(&protoMsg.MahjongOutCardResp{})
    RegisterMessage(&protoMsg.MahjongOperateReq{})
    RegisterMessage(&protoMsg.MahjongOperateResp{})
    RegisterMessage(&protoMsg.MahjongDealResp{})
    RegisterMessage(&protoMsg.MahjongHintResp{})

    //fishLord文件生成的代码
    RegisterMessage(&protoMsg.GameFishLordEnter{})
    RegisterMessage(&protoMsg.GameFishLordPlaying{})
    RegisterMessage(&protoMsg.GameFishLordBetResult{})
    RegisterMessage(&protoMsg.GameFishLordOver{})

    //brcowcow文件生成的代码
    RegisterMessage(&protoMsg.BrcowcowSceneResp{})
    RegisterMessage(&protoMsg.BrcowcowStateFreeResp{})
    RegisterMessage(&protoMsg.BrcowcowStateStartResp{})
    RegisterMessage(&protoMsg.BrcowcowStatePlayingResp{})
    RegisterMessage(&protoMsg.BrcowcowStateOpenResp{})
    RegisterMessage(&protoMsg.BrcowcowStateOverResp{})
    RegisterMessage(&protoMsg.BrcowcowBetReq{})
    RegisterMessage(&protoMsg.BrcowcowBetResp{})
    RegisterMessage(&protoMsg.BrcowcowOpenResp{})
    RegisterMessage(&protoMsg.BrcowcowOverResp{})
    RegisterMessage(&protoMsg.BrcowcowHostReq{})
    RegisterMessage(&protoMsg.BrcowcowHostResp{})
    RegisterMessage(&protoMsg.BrcowcowHostListReq{})
    RegisterMessage(&protoMsg.BrcowcowHostListResp{})

    //zhajinhua文件生成的代码
    RegisterMessage(&protoMsg.ZhajinhuaPlayer{})
    RegisterMessage(&protoMsg.EnterGameZJHResp{})
    RegisterMessage(&protoMsg.ZhajinhuaSceneResp{})
    RegisterMessage(&protoMsg.ZhajinhuaStateFreeResp{})
    RegisterMessage(&protoMsg.ZhajinhuaStateStartResp{})
    RegisterMessage(&protoMsg.ZhajinhuaStatePlayingResp{})
    RegisterMessage(&protoMsg.ZhajinhuaStateCompareResp{})
    RegisterMessage(&protoMsg.ZhajinhuaStateOverResp{})
    RegisterMessage(&protoMsg.ZhajinhuaTurnResp{})
    RegisterMessage(&protoMsg.ZhajinhuaDealResp{})
    RegisterMessage(&protoMsg.ZhajinhuaHostResp{})
    RegisterMessage(&protoMsg.ZhajinhuaReadyReq{})
    RegisterMessage(&protoMsg.ZhajinhuaReadyResp{})
    RegisterMessage(&protoMsg.ZhajinhuaFollowReq{})
    RegisterMessage(&protoMsg.ZhajinhuaFollowResp{})
    RegisterMessage(&protoMsg.ZhajinhuaRaiseReq{})
    RegisterMessage(&protoMsg.ZhajinhuaRaiseResp{})
    RegisterMessage(&protoMsg.ZhajinhuaLookReq{})
    RegisterMessage(&protoMsg.ZhajinhuaLookResp{})
    RegisterMessage(&protoMsg.ZhajinhuaCompareReq{})
    RegisterMessage(&protoMsg.ZhajinhuaCompareResp{})
    RegisterMessage(&protoMsg.ZhajinhuaGiveupReq{})
    RegisterMessage(&protoMsg.ZhajinhuaGiveupResp{})
    RegisterMessage(&protoMsg.ZhajinhuaCheckoutResp{})

    //brtoubao文件生成的代码
    RegisterMessage(&protoMsg.BrtoubaoSceneResp{})
    RegisterMessage(&protoMsg.BrtoubaoStateStartResp{})
    RegisterMessage(&protoMsg.BrtoubaoStatePlayingResp{})
    RegisterMessage(&protoMsg.BrtoubaoStateOpenResp{})
    RegisterMessage(&protoMsg.BrtoubaoStateOverResp{})
    RegisterMessage(&protoMsg.BrtoubaoBetReq{})
    RegisterMessage(&protoMsg.BrtoubaoBetResp{})
    RegisterMessage(&protoMsg.BrtoubaoOpenResp{})
    RegisterMessage(&protoMsg.BrtoubaoCheckoutResp{})
    RegisterMessage(&protoMsg.BrtoubaoHostReq{})
    RegisterMessage(&protoMsg.BrtoubaoHostResp{})
    RegisterMessage(&protoMsg.BrtoubaoSuperHostReq{})
    RegisterMessage(&protoMsg.BrtoubaoSuperHostResp{})

    //tigerXdragon文件生成的代码
    RegisterMessage(&protoMsg.TigerXdragonSceneResp{})
    RegisterMessage(&protoMsg.TigerXdragonStateStartResp{})
    RegisterMessage(&protoMsg.TigerXdragonStatePlayingResp{})
    RegisterMessage(&protoMsg.TigerXdragonStateOpenResp{})
    RegisterMessage(&protoMsg.TigerXdragonStateOverResp{})
    RegisterMessage(&protoMsg.TigerXdragonBetReq{})
    RegisterMessage(&protoMsg.TigerXdragonBetResp{})
    RegisterMessage(&protoMsg.TigerXdragonOpenResp{})
    RegisterMessage(&protoMsg.TigerXdragonCheckoutResp{})
    RegisterMessage(&protoMsg.TigerXdragonHostReq{})
    RegisterMessage(&protoMsg.TigerXdragonHostResp{})
    RegisterMessage(&protoMsg.TigerXdragonSuperHostReq{})
    RegisterMessage(&protoMsg.TigerXdragonSuperHostResp{})

    //tuitongzi文件生成的代码
    RegisterMessage(&protoMsg.TuitongziSceneResp{})
    RegisterMessage(&protoMsg.TuitongziStateStartResp{})
    RegisterMessage(&protoMsg.TuitongziStatePlayingResp{})
    RegisterMessage(&protoMsg.TuitongziStateOpenResp{})
    RegisterMessage(&protoMsg.TuitongziStateOverResp{})
    RegisterMessage(&protoMsg.TuitongziBetReq{})
    RegisterMessage(&protoMsg.TuitongziBetResp{})
    RegisterMessage(&protoMsg.TuitongziOpenResp{})
    RegisterMessage(&protoMsg.TuitongziCheckoutResp{})
    RegisterMessage(&protoMsg.TuitongziHostReq{})
    RegisterMessage(&protoMsg.TuitongziHostResp{})
    RegisterMessage(&protoMsg.TuitongziSuperHostReq{})
    RegisterMessage(&protoMsg.TuitongziSuperHostResp{})

    //tbcowcow文件生成的代码
    RegisterMessage(&protoMsg.TbcowcowPlayer{})
    RegisterMessage(&protoMsg.EnterGameTBCCResp{})
    RegisterMessage(&protoMsg.TbcowcowSceneResp{})
    RegisterMessage(&protoMsg.TbcowcowStateFreeResp{})
    RegisterMessage(&protoMsg.TbcowcowStatePlayingResp{})
    RegisterMessage(&protoMsg.TbcowcowStateDealResp{})
    RegisterMessage(&protoMsg.TbcowcowStateOpenResp{})
    RegisterMessage(&protoMsg.TbcowcowStateOverResp{})
    RegisterMessage(&protoMsg.TbcowcowDealResp{})
    RegisterMessage(&protoMsg.TbcowcowReadyReq{})
    RegisterMessage(&protoMsg.TbcowcowReadyResp{})
    RegisterMessage(&protoMsg.TbcowcowBetReq{})
    RegisterMessage(&protoMsg.TbcowcowBetResp{})
    RegisterMessage(&protoMsg.TbcowcowShowCardReq{})
    RegisterMessage(&protoMsg.TbcowcowShowCardResp{})
    RegisterMessage(&protoMsg.TbcowcowOpenResp{})
    RegisterMessage(&protoMsg.TbcowcowOverResp{})

    //qzcowcow文件生成的代码
    RegisterMessage(&protoMsg.QzcowcowPlayer{})
    RegisterMessage(&protoMsg.EnterGameQZCCResp{})
    RegisterMessage(&protoMsg.QzcowcowSceneResp{})
    RegisterMessage(&protoMsg.QzcowcowStateFreeResp{})
    RegisterMessage(&protoMsg.QzcowcowStateCallResp{})
    RegisterMessage(&protoMsg.QzcowcowStateDecideResp{})
    RegisterMessage(&protoMsg.QzcowcowStatePlayingResp{})
    RegisterMessage(&protoMsg.QzcowcowStateDealResp{})
    RegisterMessage(&protoMsg.QzcowcowStateOpenResp{})
    RegisterMessage(&protoMsg.QzcowcowStateOverResp{})
    RegisterMessage(&protoMsg.QzcowcowDealResp{})
    RegisterMessage(&protoMsg.QzcowcowReadyReq{})
    RegisterMessage(&protoMsg.QzcowcowReadyResp{})
    RegisterMessage(&protoMsg.QzcowcowCallReq{})
    RegisterMessage(&protoMsg.QzcowcowCallResp{})
    RegisterMessage(&protoMsg.QzcowcowBetReq{})
    RegisterMessage(&protoMsg.QzcowcowBetResp{})
    RegisterMessage(&protoMsg.QzcowcowOpenResp{})
    RegisterMessage(&protoMsg.QzcowcowOverResp{})

    //sangong文件生成的代码
    RegisterMessage(&protoMsg.SangongPlayer{})
    RegisterMessage(&protoMsg.EnterGameSGResp{})
    RegisterMessage(&protoMsg.SangongSceneResp{})
    RegisterMessage(&protoMsg.SangongStateFreeResp{})
    RegisterMessage(&protoMsg.SangongStateCallResp{})
    RegisterMessage(&protoMsg.SangongStateDecideResp{})
    RegisterMessage(&protoMsg.SangongStatePlayingResp{})
    RegisterMessage(&protoMsg.SangongStateDealResp{})
    RegisterMessage(&protoMsg.SangongStateOpenResp{})
    RegisterMessage(&protoMsg.SangongStateOverResp{})
    RegisterMessage(&protoMsg.SangongDealResp{})
    RegisterMessage(&protoMsg.SangongReadyReq{})
    RegisterMessage(&protoMsg.SangongReadyResp{})
    RegisterMessage(&protoMsg.SangongCallReq{})
    RegisterMessage(&protoMsg.SangongCallResp{})
    RegisterMessage(&protoMsg.SangongBetReq{})
    RegisterMessage(&protoMsg.SangongBetResp{})
    RegisterMessage(&protoMsg.SangongOutCardReq{})
    RegisterMessage(&protoMsg.SangongOutCardResp{})
    RegisterMessage(&protoMsg.SangongOpenResp{})
    RegisterMessage(&protoMsg.SangongOverResp{})

    //mahjongER文件生成的代码
    RegisterMessage(&protoMsg.MahjongERKeZi{})
    RegisterMessage(&protoMsg.MahjongERHint{})
    RegisterMessage(&protoMsg.MahjongERPlayer{})
    RegisterMessage(&protoMsg.EnterGameMJERResp{})
    RegisterMessage(&protoMsg.MahjongERSceneResp{})
    RegisterMessage(&protoMsg.MahjongERStateFreeResp{})
    RegisterMessage(&protoMsg.MahjongERStateDirectResp{})
    RegisterMessage(&protoMsg.MahjongERStateDecideResp{})
    RegisterMessage(&protoMsg.MahjongERStateRollDiceResp{})
    RegisterMessage(&protoMsg.MahjongERStateStartResp{})
    RegisterMessage(&protoMsg.MahjongERStatePlayingResp{})
    RegisterMessage(&protoMsg.MahjongERStateWaitOperateResp{})
    RegisterMessage(&protoMsg.MahjongERStateOpenResp{})
    RegisterMessage(&protoMsg.MahjongERStateOverResp{})
    RegisterMessage(&protoMsg.MahjongERReadyReq{})
    RegisterMessage(&protoMsg.MahjongERReadyResp{})
    RegisterMessage(&protoMsg.MahjongERRollReq{})
    RegisterMessage(&protoMsg.MahjongERRollResp{})
    RegisterMessage(&protoMsg.MahjongEROutCardReq{})
    RegisterMessage(&protoMsg.MahjongEROutCardResp{})
    RegisterMessage(&protoMsg.MahjongEROperateReq{})
    RegisterMessage(&protoMsg.MahjongEROperateResp{})
    RegisterMessage(&protoMsg.MahjongERDealResp{})
    RegisterMessage(&protoMsg.MahjongERHintResp{})
}

